ESFDC/src/objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>Availablity__c</fullName>
        <label>Availablity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Item__c</fullName>
        <label>Material Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Quantity__c</fullName>
        <label>Selected Quantity</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>